--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@antv/x6": "^1.31.1",
     "axios": "^0.25.0",
     "core-js": "^3.21.0",
     "echarts": "^5.3.0",
     "element-plus": "^1.3.0-beta.10",
     "moment": "^2.29.1",
+    "node-sass": "^7.0.1",
     "typescript": "^4.5.5",
     "vue": "^3.2.0",
     "vue-axios": "^3.4.0",
+    "vue-grid-layout": "^3.0.0-beta1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.2"
   },
@@ -30,6 +33,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.0.0",
+    "sass-loader": "^7.3.1",
     "unplugin-auto-import": "^0.5.11",
     "unplugin-vue-components": "^0.17.15"
   },
