--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.21.0",
     "echarts": "^5.3.0",
     "element-plus": "^1.3.0-beta.10",
+    "mapvgl": "^1.0.0-beta.147",
     "moment": "^2.29.1",
     "node-sass": "^7.0.1",
     "typescript": "^4.5.5",
